<resources>
    <string name="app_name">MyStroke</string>
    <string name="db_api_url">http://localhost/api.php</string>
    <!-- <string name="title_activity_login">Sign in</string> -->

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings for App Bar -->
    <string name="back">Back</string>
    <string name="log_out">Sign Out</string>

    <!-- Menu item strings -->
    <string name="exerciseBut">Exercises</string>
    <string name="imageryBut">Imageries</string>
    <string name="chatBut">Messages</string>
    <string name="trackerBut">Tracker</string>
    <string name="assessBut">Assessment</string>
    <string name="profileBut">My Profile</string>
    <string name="helpBut">Info</string>
    <string name="patientBut">Patients</string>
    <string name="descriptionBut">Description</string>
    <string name="recordBut">Record Performance</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="name_first">First Name</string>
    <string name="name_second">Second Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="edit">Edit</string>
    <string name="email">Email</string>
    <string name="exercise_list_label">Exercises</string>
    <string name="imagery_list_label">Imageries</string>
    <string name="placeholder">Placeholder</string>
    <string name="confirm_changes">Confirm changes</string>

    <!-- Strings for Dialogues -->
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>
    <string name="confirm">Confirm</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="send">Send</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="submit">Submit</string>
    <string name="finish">Finish</string>
    <string name="home_screen">Home Screen</string>
    <string name="title_activity_chat">Chat</string>
    <string name="message_edit_text_hint">Click to write</string>
    <string name="choose_patient">Choose a patient</string>
    <string name="choose_item">Choose an item</string>
    <string name="choose_section">Choose a category</string>
    <string name="add_instructions">Additional instructions</string>

    <!-- Class names -->
    <string name="imagery">imagery</string>
    <string name="assessment">assessment</string>
    <string name="assessment_item">assessment_item</string>
    <string name="assessment_result_double">assessment_result_double</string>
    <string name="assessment_result_int">assessment_result_int</string>
    <string name="assessment_result_string">assessment_result_string</string>
    <string name="assessment_result_boolean">assessment_result_boolean</string>
    <string name="comment">comment</string>
    <string name="exercise">exercise</string>
    <string name="patient">patient</string>
    <string name="patient_assesses_exercise">patient_assesses_exercise</string>
    <string name="therapist_assesses_exercise">therapist_assesses_exercise</string>
    <string name="patient_list_exercise">patient_list_exercise</string>
    <string name="patient_list_imagery">patient_list_imagery</string>
    <string name="therapist">Therapist</string>
    <string name="user">user</string>
    <string name="help_page">help_page</string>

    <!-- Strings for content description -->
    <string name="con_desc_send_button">Send button</string>
    <string name="con_desc_list_link">Select list item button</string>

    <string name="title_activity_add_exercise">AddExerciseActivity</string>
    <string name="title_activity_view_patients">ViewPatientsActivity</string>
    <string name="patientTitle">Patient</string>
    <string name="title_activity_view_patient">ViewPatientActivity</string>
    <string name="title_activity_therapist_home">TherapistHomeActivity</string>
    <string name="a_search_icon">A search icon</string>
    <string name="search">Search</string>
    <string name="add_new_item">Add new item</string>
    <string name="title_activity_patient_list">PatientListActivity</string>
    <string name="change_password">Change Password</string>
    <string name="exercise_list">Exercise List</string>
    <string name="imagery_list">Imagery List</string>
    <string name="imageriesSwitch">Imageries </string>
    <string name="title_activity_edit_list_imagery">EditListImageryActivity</string>
    <string name="title_activity_edit_list_exercise">EditListExerciseActivity</string>
    <string name="title_activity_patient_or_therapist">PatientOrTherapistActivity</string>
    <string name="login_as">Login as a</string>
    <string name="or">or</string>
    <string name="add_an_exercise">Add an exercise</string>
    <string name="title">Title</string>
    <string name="click_to_write">Tap to write</string>
    <string name="description">Description</string>
    <string name="this_should_be_descriptive_enough_to_complete_the_exercise_without_additional_information">This should be descriptive enough that a user can complete the exercise without any additional information</string>
    <string name="add_media">Include media</string>
    <string name="section">Category</string>
    <string name="performance_metric">Performance metric</string>
    <string name="title_activity_add_exercise_media">AddExerciseMediaActivity</string>
    <string name="image_form_instructions">Press the plus symbol to add an image.</string>
    <string name="alternative_text">Alternative text</string>
    <string name="alt_text_hint">For accessibility, images should have a text alternative that explains their contents</string>
    <string name="title_activity_image_confirm">ImageConfirmActivity</string>
    <string name="exercise_image">exercise_image</string>
    <string name="add_link_to_youtube">Add link to YouTube</string>
    <string name="yt_instruction">Success! You can confirm the link works by tapping the thumbnail.</string>
    <string name="therapist_label">Therapist:</string>
    <string name="email_label">Email:</string>
    <string name="title_activity_edit_exercise">EditExerciseActivity</string>
    <string name="click_view_images">Tap to view images</string>
    <string name="click_view_video">Tap to view video</string>
    <string name="record_feedback">Record Feedback</string>
    <string name="tap_to_edit">Tap to edit:</string>
    <string name="cancel_changes">Cancel changes</string>
    <string name="title_activity_register_patient">RegisterPatientActivity</string>
    <string name="title_activity_exercise_feedback">ExerciseFeedbackActivity</string>
    <string name="completed_exercise_message">Well done! How did you find the exercise?</string>
    <string name="easiest_exercise">Very easy</string>
    <string name="hardest_exercise">Challenging</string>
    <string name="title_activity_add_info_page">AddInfoPageActivity</string>
    <string name="content_colon">Content:</string>
    <string name="content">Content</string>
    <string name="add_under">Add under:</string>
    <string name="loading">Loading…</string>
    <string name="info_page_content_form_hint">You may choose to leave this blank for a page that only contains links to other pages. When creating those pages, simply add them under this one.</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="feedback_question">How easy did you find exercise?</string>
    <string name="feedback_not_easy">Not easy</string>
    <string name="feedback_easy">Very easy</string>
    <string name="title_activity_feedback_left">FeedbackLeftActivity</string>
    <string name="feedback_successful">Your feedback has been saved!</string>
    <string name="update">Update</string>
    <string name="edit_media">Edit media</string>
    <string name="title_activity_exercise_clicked_options">ExerciseClickedOptionsActivity</string>
    <string name="view_exercise">View Exercise</string>
    <string name="edit_exercise">Edit Exercise</string>
    <string name="view">View</string>
    <string name="media_submitted">Exercise updated!</string>
    <string name="title_activity_add_media_or_finished">AddMediaOrFinishedActivity</string>
    <string name="exercise_uploaded">Exercise uploaded! Add pictures or a video?</string>
    <string name="title_activity_register_therapist_enter_code">RegisterTherapistEnterCodeActivity
    </string>
    <string name="to_register_as_therapist">To register as a therapist, enter the code provided to you.</string>
    <string name="to_register_as_patient">To register as a patient, enter the code provided by a physio.</string>
    <string name="to_register_as_user">To register, enter the code provided by a physiotherapist.</string>
    <string name="enter_code">Enter Code</string>
    <string name="title_activity_register_therapist">RegisterTherapistActivity</string>
    <string name="register">Register</string>
    <string name="physio_email_hint">Please use your NHS email</string>
    <string name="password">Password</string>
    <string name="title_activity_view_therapists">ViewTherapistsActivity</string>
    <string name="title_activity_therapist">TherapistActivity</string>
    <string name="patient_list">Patient List</string>
    <string name="not_admin">This user does not have administrator rights.</string>
    <string name="is_admin">This user is an administrator.</string>
    <string name="title_activity_therapist_list">TherapistListActivity</string>
    <string name="patients">Patients</string>
    <string name="title_activity_add_imagery">AddImageryActivity</string>
    <string name="title_activity_generate_register_code">GenerateRegisterCodeActivity</string>
    <string name="generate_code">Generate Code</string>
    <string name="code_instruction_text">Tap button to generate a code. It will be active for 24 hours</string>
    <string name="code_radio_instruction">Account type?</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="register_code">Register code</string>
    <string name="home">Home</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_register_code">New Register Code</string>
    <string name="play_video">Play Video</string>
    <string name="exercise_deleted">Exercise deleted</string>
    <string name="therapists">Therapists</string>
    <string name="title_activity_exercise_images">ExerciseImagesActivity</string>
</resources>
