<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_rectangle">

    <TextView
        android:id="@+id/textView2"
        style="@style/H3Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/exerciseBut"
        app:layout_constraintStart_toStartOf="@+id/videoPreview" />

    <ImageView
        android:id="@+id/videoPreview"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@android:drawable/ic_media_play" />

    <Button
        android:id="@+id/buttonDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:padding="5dp"
        android:text="@string/descriptionBut"
        app:layout_constraintEnd_toEndOf="@+id/buttonEvaluate"
        app:layout_constraintStart_toEndOf="@+id/videoPreview"
        app:layout_constraintTop_toTopOf="@+id/videoPreview" />

    <Button
        android:id="@+id/buttonEvaluate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:padding="5dp"

        android:text="@string/recordBut"

        app:layout_constraintBottom_toBottomOf="@id/videoPreview"
        app:layout_constraintStart_toEndOf="@+id/videoPreview"
        android:layout_marginLeft="8dp" />

</android.support.constraint.ConstraintLayout>