<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/youTubeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/add_link_to_youtube"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="8dp" />

    <Button
        android:id="@+id/youTubeButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:onClick="onYouTubeClick"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="@+id/youTubeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/youTubeText"
        app:layout_constraintTop_toTopOf="@+id/youTubeText" />

    <ImageView
        android:id="@+id/thumbnailView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/youTubeInstructionText"
        app:layout_constraintTop_toBottomOf="@+id/youTubeButton"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/youTubeInstructionText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/yt_instruction"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/thumbnailView"
        app:layout_constraintEnd_toEndOf="@+id/youTubeText"
        app:layout_constraintStart_toStartOf="@+id/youTubeText"
        app:layout_constraintTop_toTopOf="@+id/thumbnailView" />
</android.support.constraint.ConstraintLayout>